@@ -230,6 +230,9 @@ changes to languages because of Bugzilla reports.
   againt further render attempts for 1 hour. $wgAttemptFailureEpoch can be
   altered to reset all rate-limited thumbnails at once.
 * (bug 56572) Builds of the OOjs and OOjs UI libraries are now available.
+* SpecialRecentChanges no longer includes any functionality for generating feeds
+  - it has been factored out to ApiFeedRecentChanges. Old URLs redirect to new
+  ones.
 
 ==== Removed classes ====
 * FakeMemCachedClient (deprecated in 1.18)
